src/test/ui/nll/polonius/assignment-to-differing-field.stderr
error[E0499]: cannot borrow `list.0.value` as mutable more than once at a time
  --> $DIR/assignment-to-differing-field.rs:21:21
   |
LL | fn assignment_to_field_projection<'a, T>(
   |                                   -- lifetime `'a` defined here
...
LL |         result.push(&mut (list.0).value);
   |                     ^^^^^^^^^^^^^^^^^^^ mutable borrow starts here in previous iteration of loop
...
LL |             return result;
   |                    ------ returning this value requires that `list.0.value` is borrowed for `'a`

error[E0499]: cannot borrow `list.0.next` as mutable more than once at a time
  --> $DIR/assignment-to-differing-field.rs:24:26
   |
LL | fn assignment_to_field_projection<'a, T>(
   |                                   -- lifetime `'a` defined here
...
LL |         if let Some(n) = (list.0).next.as_mut() {
   |                          ^^^^^^^^^^^^^---------
   |                          |
   |                          mutable borrow starts here in previous iteration of loop
   |                          argument requires that `list.0.next` is borrowed for `'a`

error[E0499]: cannot borrow `list.0.0.0.0.0.value` as mutable more than once at a time
  --> $DIR/assignment-to-differing-field.rs:38:21
   |
LL | fn assignment_through_projection_chain<'a, T>(
   |                                        -- lifetime `'a` defined here
...
LL |         result.push(&mut ((((list.0).0).0).0).0.value);
   |                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ mutable borrow starts here in previous iteration of loop
...
LL |             return result;
   |                    ------ returning this value requires that `list.0.0.0.0.0.value` is borrowed for `'a`

error[E0499]: cannot borrow `list.0.0.0.0.0.next` as mutable more than once at a time
  --> $DIR/assignment-to-differing-field.rs:41:26
   |
LL | fn assignment_through_projection_chain<'a, T>(
   |                                        -- lifetime `'a` defined here
...
LL |         if let Some(n) = ((((list.0).0).0).0).0.next.as_mut() {
   |                          ^^^^^^^^^^^^^^^^^^^^^^^^^^^---------
   |                          |
   |                          mutable borrow starts here in previous iteration of loop
   |                          argument requires that `list.0.0.0.0.0.next` is borrowed for `'a`

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0499`.
